add button to travel to hideout of cheapest listing to item chip
